fix(Interactive Results): prevent patron overlapping content

--- a/src/components/interactive-results/_interactive-results.scss
+++ b/src/components/interactive-results/_interactive-results.scss
@@ -1,4 +1,9 @@
 .c-interactive-results {
+    > * {
+        position: relative;
+        z-index: 2;
+    }
+
     &__restart-button {
         position: absolute;
         bottom: 12px;
